<!--
  ~  Copyright 2019 TheRedSpy15
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
  -->

<resources>
    <string name="app_name">LTE Cleaner</string>
    <string name="lte_cleaner">LTE Cleaner! Logs, Temporary and Empty Cleaner</string>
    <string name="no_files_found">No files found</string>
    <string name="delete_empty_folders">Delete empty folders</string>
    <string name="aggressive_filter">Enable aggressive filter</string>
    <string name="Save">Save</string>
    <string name="filter">Filter</string>
    <string name="whitelist">Whitelist</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="add_to_whitelist">Add to whitelist</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="enter_file_name">Enter file/folder name to whitelist</string>
    <string name="make_suggestion">Make Suggestion</string>
    <string name="select_task">Select a task</string>
    <string name="do_you_want_to">Do you want to delete (Clean) all found files, or only display (Analyze) them?</string>
    <string name="clean">Clean</string>
    <string name="analyze">Analyze</string>
    <string name="enable_generic_filter">Enable generic filter</string>
    <string name="one_click_clean">One click clean</string>
    <string name="freed">Freed: </string>
    <string name="kb">KB</string>
    <string name="found">Found: </string>
    <string name="auto_whitelist">Auto Whitelist</string>
    <string name="reset_whitelist">Empty whitelist?</string>
    <string name="are_you_reset_whitelist">Are you sure you want to clear the whitelist?</string>
    <string name="reset">Clear</string>
    <string name="delete_apk_files">Delete .apk files</string>
    <string name="lte_threading">LTE Threading (Faster)</string>
    <string name="default_whitelist">Default Whitelist</string>
    <string name="add_defaults">Add Recommended Whitelists</string>
    <string name="nothing_found">Nothing found</string>
    <string name="status_idle">Status: Idle</string>
    <string name="progress_0">Progress: 0%</string>
    <string name="used_0">Used: 0%</string>
    <string name="status_running">Status: Running</string>
    <string name="title_activity_settings2">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
