<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Copyright 2019 TheRedSpy15
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".SettingsActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="217dp"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/threadBox"
                android:onClick="save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/lte_threading"
                android:textColor="@color/colorAccent"
                app:layout_constraintStart_toStartOf="@+id/scrollView2" />

            <CheckBox
                android:id="@+id/genericBox"
                android:onClick="save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/enable_generic_filter"
                android:textColor="@color/colorAccent"
                app:layout_constraintStart_toStartOf="parent" />

            <CheckBox
                android:id="@+id/aggressiveBox"
                android:onClick="save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/aggressive_filter"
                android:textColor="@color/colorAccent"
                app:layout_constraintStart_toStartOf="parent" />

            <CheckBox
                android:id="@+id/emptyFolderBox"
                android:onClick="save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/delete_empty_folders"
                android:textColor="@color/colorAccent"
                app:layout_constraintStart_toStartOf="@+id/scrollView2" />

            <CheckBox
                android:id="@+id/apkBox"
                android:onClick="save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/delete_apk_files"
                android:textColor="@color/colorAccent"
                app:layout_constraintStart_toStartOf="@+id/scrollView2" />

            <CheckBox
                android:id="@+id/oneClickBox"
                android:onClick="save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/one_click_clean"
                android:textColor="@color/colorAccent"
                app:layout_constraintStart_toStartOf="@+id/scrollView2" />

            <CheckBox
                android:id="@+id/autoWhiteBox"
                android:onClick="save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/auto_whitelist"
                android:textColor="@color/colorAccent"
                app:layout_constraintStart_toStartOf="@+id/scrollView2" />

        </LinearLayout>
    </ScrollView>

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/privacyPolicyButton"
        android:layout_width="0dp"
        android:layout_height="61dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="viewPrivacyPolicy"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/scrollView2"
        app:layout_constraintTop_toTopOf="parent"
        fancy:fb_fontIconResource="&#xf0c1;"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="@color/colorPrimaryDark"
        fancy:fb_focusColor="@color/colorAccent"
        fancy:fb_radius="30dp"
        fancy:fb_text="@string/privacy_policy"
        fancy:fb_textColor="@color/buttonText" />

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/issueButton"
        android:layout_width="0dp"
        android:layout_height="61dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="reportIssue"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/scrollView2"
        app:layout_constraintTop_toBottomOf="@+id/whitelistButton"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="@color/colorPrimaryDark"
        fancy:fb_focusColor="@color/colorAccent"
        fancy:fb_radius="30dp"
        fancy:fb_text="@string/make_suggestion"
        fancy:fb_textColor="@color/buttonText" />

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/whitelistButton"
        android:layout_width="0dp"
        android:layout_height="61dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="whitelists"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/scrollView2"
        app:layout_constraintTop_toBottomOf="@+id/privacyPolicyButton"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="@color/colorPrimaryDark"
        fancy:fb_focusColor="@color/colorAccent"
        fancy:fb_radius="30dp"
        fancy:fb_text="Whitelist"
        fancy:fb_textColor="@color/buttonText" />

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="back"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="@color/colorPrimaryDark"
        fancy:fb_focusColor="@color/colorAccent"
        fancy:fb_fontIconResource="&#xf060;"
        fancy:fb_radius="30dp"
        fancy:fb_text=""
        fancy:fb_textColor="@color/buttonText" />

</androidx.constraintlayout.widget.ConstraintLayout>